...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                <subviews>
                                    <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="szukaj miasta" translatesAutoresizingMaskIntoConstraints="NO" id="duU-CU-zjU">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <constraints>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Wskaż lokalizację na mapie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IZE-Jf-c7U">
                                                    <rect key="frame" x="15" y="0.0" width="325.5" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6r0-eC-u3K">
                                                                <rect key="frame" x="0.0" y="597" width="335" height="38"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="onboarding"/>
                                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fme-qe-1IX">
                                                                <rect key="frame" x="0.0" y="655" width="335" height="38"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="feedback"/>
                                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
                                                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
...
                                <color key="barTintColor" red="0.92150187492370605" green="0.92147433757781982" blue="0.92148995399475098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <items>
                                    <navigationItem title="Wybierz lokalizację" id="aYU-fT-aKy">
                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="IXb-Zd-1SH">
                                            <connections>
...
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Pokaż" id="SxL-e7-iV7">
                                            <connections>
                                                <action selector="didClickShowButton:" destination="i3E-TH-02Z" id="MAP-68-Pot"/>
...
                                        <rect key="frame" x="8" y="8" width="359" height="607"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="comment-content"/>
                                        <attributedString key="attributedText">
                                            <fragment>
...
                        <viewLayoutGuide key="safeArea" id="x9H-cT-ZFB"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Komentarz" image="forecaster-comment" id="br9-OC-Jd1"/>
                    <connections>
                        <outlet property="textView" destination="wuJ-i2-Dd3" id="KAv-wr-eLO"/>
...
                        <viewLayoutGuide key="safeArea" id="WGx-CW-o3n"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Mapy" image="detailed-maps" id="mdg-cq-Zyh"/>
                    <navigationItem key="navigationItem" id="x78-j3-tT4"/>
                    <connections>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ciśnienie na poziomie morza" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcm-Ob-iGt">
                                                <rect key="frame" x="8" y="8" width="359" height="19"/>
                                                <accessibility key="accessibilityConfiguration" identifier="DetailedMapTitle"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="16"/>
                                                <nil key="textColor"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016.12.20 9:00 UTC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5O-P4-bQ5">
                                                <rect key="frame" x="8" y="27" width="359" height="17"/>
                                                <accessibility key="accessibilityConfiguration" identifier="DetailedMapMoment"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                                <nil key="textColor"/>
...
                                                    <slider opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ml6-jq-dek">
                                                        <rect key="frame" x="6" y="8" width="363" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="moment-slider"/>
                                                        <connections>
                                                            <action selector="onSliderPositionChangeAction:" destination="PxB-id-yZw" eventType="valueChanged" id="IbU-rY-JaB"/>
...
