...
    
    private func setupDismissButton()
    {
        dismissButton = UIButton()
        dismissButton.backgroundColor = UIColor(white: 0.94, alpha: 1)
        dismissButton.setTranslatesAutoresizingMaskIntoConstraints(false)
        dismissButton.setTitle("Anuluj", forState: UIControlState.Normal)
        dismissButton.setTitleColor(UIColor.blackColor(), forState: UIControlState.Normal)
        dismissButton.addTarget(self, action: Selector("dismissButtonDidClicked:"), forControlEvents: UIControlEvents.TouchUpInside)
        dismissButton.layer.cornerRadius = 5
        dismissButton.layer.borderWidth = 1
        dismissButton.layer.borderColor = UIColor.lightGrayColor().CGColor
    }
...
