...
                    <constraints>
                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="GpG-hs-JvQ"/>
                    </constraints>
                </stackView>
            </subviews>
            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="activity-indicator">
                <accessibilityTraits key="traits" none="YES"/>
                <bool key="isElement" value="YES"/>
            </accessibility>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="PUC-fs-tw4" secondAttribute="bottom" constant="10" id="Gk7-8J-ZCN"/>
                <constraint firstItem="PUC-fs-tw4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="Q1C-Zn-VE8"/>
...
