...
        mapView.isUserInteractionEnabled = enabled
    }
    
    fileprivate func setupButtons()
    {
        btnClose.accessibilityIdentifier = "close"
        navigationBar.accessibilityIdentifier = "select-location-screen"
        btnShow.accessibilityIdentifier = "show"
        btnShow.isEnabled = false
    }
    
    fileprivate func setupModelController()
    {
        modelController = MMTCurrentCityModelController(store: MMTCoreDataCitiesStore())
...
