...
        let sectionType = citiesIndex[indexPath.section].type
        
        guard sectionType != .NotFound else {
            
            let
            cell = tableView.dequeueReusableCell(withIdentifier: "FindLocationCell", for: indexPath)
            cell.accessibilityIdentifier = "find-city-on-map"
            
            return cell
        }
        
        let isCurrentLocation = sectionType == .CurrentLocation
        let city = citiesIndex[indexPath.section].cities[indexPath.row]
...
