...
    // MARK: Setup methods
    fileprivate func setupSearchBar()
    {
        searchBarDelegate = MMTCitiesSearchBarDelegate(handler: self.onSearchStateChange)
        
        searchBar.delegate = searchBarDelegate
        searchBar.accessibilityIdentifier = "cities-search"
        searchBar.reset()
    }
    
    fileprivate func setupTableView()
    {
        let headerNib = UINib(nibName: "MMTCitiesListSectionHeader", bundle: nil)
...
